<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.beginner.hangdroid.GameActivity"
    tools:showIn="@layout/activity_game">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/game_over"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/game_image_descriptor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_color"
        android:id="@+id/layoutAddLetter">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_score"
            android:textAllCaps="false"
            android:id="@+id/button"
            android:onClick="saveScore" />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_your_name"
            android:id="@+id/editTextName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
             />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/layoutLetters">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/textViewPoints"
            android:layout_marginRight="5dp"
            android:textSize="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/points"
            android:id="@+id/textViewPointsText"
            android:layout_marginRight="5dp"
            android:textSize="40dp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/red" />
</RelativeLayout>
