<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.beginner.hangdroid.GameMultiActivity"
    tools:showIn="@layout/activity_game">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hangdroid_0"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/game_image_descriptor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_color"
        android:id="@+id/layoutAddLetter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/insert_letter"
            android:id="@+id/textView"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLetter"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_letter"
            android:textAllCaps="false"
            android:id="@+id/button"
            android:onClick="introduceLetter" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/layoutLetters">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/red" />
</RelativeLayout>
